	New backend FFmpeg
	Bookmarks for often used folders
	Bugfixes

Version 0.0.10 19.05.09
	Show system information in the about window
	First start wizard. It can import amarok database or create a collection
	Scrobbler for Libre.FM
	Import collection from Amarok 1.4 sqlite database.
	Collection settings: functions for rescan and cleanup collection.
	Information panel improvements. You can choose information you wanna see.
	Session management fixed
	Bugfixes

Version 0.0.9 17.04.09
	Create browser for internet services, support Magnatune and Jamendo
	Bugfixes

Version 0.0.8 10.04.09
	Interface improvements
	Bugfixes

Version 0.0.7 27.03.09
	New plugin for Phonon
	Bugfixes

Version 0.0.6a 12.03.09
	Add hack for cp1251
	Update translation

Version 0.0.6 10.03.09
	QTagConvert (http://sourceforge.net/projects/qtagconvert/) has been included into Cuberok. Now you can convert your tags easy.
	ID3v1 tags always reads from system codepage.
	New images for buttons are from ACUN 0.7 icon theme (http://truvalinux.org.tr/acun/)

Version 0.0.5 20.02.09
	Remake informaion panel. Loading artist and album info from Last.FM, loading lyrics from LyricWiki.org
	Smart playlists (by custom SQL requests)

Version 0.0.4a	20.11.08
	Bugfixes

Version 0.0.4 7.11.08
	Information panel show artist and album for current song.
	Installer for Windows.
	Downloading images for albums and artists from Last.FM
	Last.FM scrobbler (proxy supported but not tested)
	Proxy settings for download and shoutcast (not tested yet)
	"Open URL" dialog can download playlist from the web
	Codepage selection for CUE sheets

Version 0.0.3	2.09.08
	CUE support (experimental)
	Shoutcast/icecast support (experimental)
	New playlist formats support, XSPF for reading/writing, ASX(ASP) for reading only
	Make library for CUE files and playlists
	GStreamer backend rewritten (volume control doesn't work :-(

Version 0.0.2	1.08.08
	Make auto rating for songs and attributes (artist, album, genre).
	Art for songs and attributes.