@@ -1,4 +1,5 @@
-	New backend FFmpeg
+	Command line options. You can control playing by scripts or other events. Type 'cuberok -h' for details.
+	New backend: FFmpeg
 	Bookmarks for often used folders
 	Bugfixes
 
